[package]
name = "cors-bypass"
version = "0.1.1"
edition = "2021"
authors = ["oxwazz"]

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.5.0", features = ['http'] }
console_error_panic_hook = { version = "0.1.7" }
http = "1.2.0"
reqwest = { version = "0.12.12", features = ["json"] }
url = "2.5.4"
