[package]
name = "cors_bypass"
version = "0.1.1"
description = "Effortlessly access your backend APIs without CORS headaches!"
repository = "https://github.com/oxwazz/cors-bypass"
license = "MIT"
homepage = "https://github.com/oxwazz/cors-bypass"
authors = ["Muhammad Rahmahalim <muhammad.rahmahalim@gmail.com>"]
edition = "2021"
keywords = ["cors", "bypass"]

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.5.0", features = ['http'] }
console_error_panic_hook = { version = "0.1.7" }
http = "1.2.0"
reqwest = { version = "0.12.12", features = ["json"] }
url = "2.5.4"
